--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
   <header>
     <h1>Velveta</h1>
     <nav>
-      <a href="#">Home</a>
+      <a href="#" style="font-weight:900;">Home</a>
       <a href="#">Donna</a>
       <a href="#">Uomo</a>
       <a href="#">Contatti</a>
@@ -121,30 +121,30 @@
   </header>
 
   <section class="hero">
-    <table class="women">
+    <table class="men">
       <tr>
         <td>
-          <img src="./assets/fashion-2309519_1280.jpg" alt="Immagine" class="img">
+          <img src="./assets/fashion-2309519_1280_1.png" alt="Immagine" class="img">
         </td>
         <td>
-    <h2>Eleganza Femminile</h2>
-    <p>Scopri la nostra nuova collezione pensata per la donna moderna: delicata, decisa, unica.</p>
-    <button onclick="alert('Naviga alla sezione Donna')">Esplora Donna</button>
+    <h2>Stile Maschile</h2>
+    <p>Una selezione esclusiva per l’uomo contemporaneo: essenziale, raffinato, distintivo.</p>
+    <button href="#">Esplora Uomo</button>
     </td>
   </tr>  
   </table>
   </section>
 
   <section class="section-men">
-    <table class="men">
+    <table class="women">
     <tr>
         <td>
-    <h2>Stile Maschile</h2>
-    <p>Una selezione esclusiva per l’uomo contemporaneo: essenziale, raffinato, distintivo.</p>
-    <button onclick="alert('Naviga alla sezione Uomo')">Esplora Uomo</button>
+    <h2>Eleganza Femminile</h2>
+    <p>Scopri la nostra nuova collezione pensata per la donna moderna: delicata, decisa, unica. </p>
+    <button href="#">Esplora Donna</button>
     </td>
     <td>
-          <img src="./assets/fashion-2309519_1280.jpg" alt="Immagine" class="img-men">
+          <img src="./assets/fashion-2309519_1280.png" alt="Immagine" class="img-men">
     </td>
     </tr>
     </table>
